--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,13 @@
   margin-left: 10px;
 }
 
+/*Flex box classes*/
+.row{
+  display: flex;
+}
+
+col
+
 /* Landing Pager */
 
 .white-bg {
@@ -113,13 +120,8 @@
 
 .or-line {
   position: absolute;
-  display: inline-block;
-  width: 325px;
-  height: 0px;
-  left: 56.5%;
-  top: 850px;;
-
-  border: 1px solid rgba(0, 0, 0, 0.25);
+  left: 55%;
+  top: 840px;;
 }
 
 .or-text {
@@ -144,4 +146,129 @@
   top: 1000px;
   font-size: 30px;
   font-weight: bold;
+}
+
+/* Signup/Login/Forgot Page */
+
+.credentials-bg {
+  position: absolute;
+  background: #B5B1B1;
+  width: 100%;
+  height: 100%;
+}
+
+.credentials-popup {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  height: 900px;
+  width: 700px;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.credentials-icon {
+  left: 318px;
+  top: 20px;
+  position: absolute;
+}
+
+.credentials-header {
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 100px;
+}
+
+.credentials-x {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background: none;
+  color: lightgray;
+  border: none;
+}
+
+.credentials-x:hover {
+  color: black;
+}
+
+/* Signup Page */
+
+.text-field {
+  position: absolute;
+  left: 100px;
+  width: 500px;
+}
+
+.name {
+  top: 250px;
+}
+
+.email {
+  top: 375px;
+}
+
+.date-header{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 500px;
+}
+
+.date-text{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+}
+
+.date-1{
+  top: 550px;
+}
+
+.date-2{
+  top: 580px;
+}
+
+.next-button {
+  position: absolute;
+  display: block;
+  width: 464px;
+  height: 43px;
+  left: 100px;
+  top: 800px;
+
+  background: #DADADA;
+  border-radius: 35px;
+  border: none;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.next-button:hover {
+  background-color: lightblue;
+}
+
+/* DOB Component */
+
+.signup-dob-container{
+  position: absolute;
+  top: 650px;
+  left: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 90%;
+}
+
+.css-1ualgfl-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root {
+  font-size: 30px !important;
+  width: 200px !important;
+}
+
+.css-1poimk-MuiPaper-root-MuiMenu-paper-MuiPaper-root-MuiPopover-paper {
+  max-height: 300px !important;
 }
