--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@
   margin-left: 10px;
 }
 
+.tweet-font {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+}
+
 /*Flex box classes*/
 .row{
   display: flex;
@@ -387,6 +392,11 @@ col
  border-radius: 35px;
 }
 
+.dash-left-item:hover:active {
+  background-color: white;
+  border: 1px solid #B5B1B1;
+}
+
 .dash-middle-col {
   left: 250px;
   position: absolute;
@@ -401,4 +411,45 @@ col
   top: 50px;
   display: block;
   width: 400px;
+}
+
+/* Tweet Component */
+
+.tweet-container {
+  display: block;
+  border: 1px solid black;
+  width: 650px;
+  margin-left: 25px;
+  margin-right: 25px;
+  
+}
+
+.round-button {
+  background: none;
+  border: none;
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+}
+
+.round-button:hover {
+  border: 1px solid black;
+}
+
+.tweet-msg {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.share-content-icon {
+  background: none;
+  border: none;
+}
+
+.share-content-icon:hover {
+  border: 1px solid black;
+}
+
+.share-tweet-btn {
+  text-align: right;
 }
